Day2: input and if in JavaScript

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <h1>Hello JavaScript</h1>
 
+        <input id="age" type="number" placeholder="Enter your age">
         <button onclick="sayHello()">Click me</button>
 
         <script src="main.js"></script>
