Day2: score checker app

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <input id="age" type="number" placeholder="Enter your age">
         <button onclick="sayHello()">Click me</button>
 
+        <hr>
+        <input id="score" type="number" placeholder="Enter score">
+        <button onclick="checkScore()">Check</button>
+        <p id="result"></p>
+
         <script src="main.js"></script>
     </body>
 </html>
