Day3: fetch result.csv and render it as table

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
         <button onclick="checkScore()">Check</button>
         <p id="result"></p>
 
+        <hr>
+        <button onclick="showPeople()">Show People</button>
+
+        <hr>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Score</th>
+                    <th>Result</th>
+                </tr>
+            </thead>
+            <tbody id="table-body"></tbody>
+        </table>
+
         <script src="main.js"></script>
+
     </body>
 </html>
