--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>My First JavaScript</title>
+        <style>
+            .pass {
+                color: green;
+                font-weight: bold;
+            }
+
+            .fail {
+                color: red;
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
 
