Add UI for creating records with MySQL backend

--- a/week2_day4.html
+++ b/week2_day4.html
@@ -3,15 +3,17 @@
     <body>
         <h2>Score Manager</h2>
 
-<!-- Add form -->
-  <h3>Add</h3>
-  Name:
-  <input id="addName" />
-  Score:
-  <input id="addScore" type="number" />
-  <button onclick="addRecord()">Add</button>
+        <!-- Add form 追加分-->
+        <h3>Add</h3>
+        Name:
+        <input id="addName" />
+        Score:
+        <input id="addScore" type="number" />
+        <button onclick="addRecord()">Add</button>
 
-  <hr />
+        <hr />
+
+        <!-- Search + Sort -->
         Name:
         <input id="nameInput">
         <button onclick="load()">Search</button>
